syntax = "proto3";

package pb;

service CenterService {
	rpc Login(Login.LoginReq) returns (Login.LoginResp){}//验证帐号
    rpc Logout(Login.LogoutReq) returns (Login.LogoutResp){}//退出登录
	rpc Auth(Auth.AuthReq) returns (Auth.AuthResp){} // 验证凭证
    rpc GetUser(User.UserReq) returns (User.UserResp){}//获取用户信息
    rpc AddUser(User.AddUserReq) returns (User.AddUserResp){}//添加用户
    rpc UpdateUser(User.UpdateUserReq) returns (User.UpdateUserResp){}//更新用户
}

message Login{
    message LoginReq{
        int32 app_id = 1;
        string username = 2;
        string password = 3;
    }
    message LoginResp{
        string token = 1;
    }

    message LogoutReq{
        string token = 1;
    }
    message LogoutResp{
    }

}

message Auth{

	message AuthReq{
		string token = 1;
	}
	message AuthResp {
        string tokenInfo = 1;
	}
}

message User{
    message UserReq{
        int32 uid = 1;
        string username = 2;
    }
    message UserResp{
        int32 uid = 1;
        string username = 2;
    }
    message AddUserReq{
        int32 app_id = 1;
        string username = 2;
        string password = 3;
        string salt = 4;
    }
    message AddUserResp{
        int32 uid = 1;
    }
    message UpdateUserReq{
        int32 uid = 1;
    }
    message UpdateUserResp{
    }
}
